# Rust_Proj

./: README.md
Lab_Rust/: Cargo.toml
Lab_Rust/src/: main.rs
parser_response/: Cargo.toml  Install.txt  main.py  pyproject.toml  test1.py
parser_response/client_http/: etl_debag_client.py  new_client.py
parser_response/src/: lib.rs  lib_1.rs  lib_2.rs  lib_4.rs  lib_6.rs  lib_final_1.rs
test_maturin/: Cargo.toml  main.py  pyproject.toml
test_maturin/src/: lib.rs
test_parser/: Cargo.toml  pyproject.toml  test1.py
test_parser/src/: lib.rs  lib_3.rs  lib_5.rs
